# socket

./: .clang-format
src/: CMakeLists.txt
src/cmake/: CommonTools.cmake
src/www/: index.html  index.php  index.php.html  test.html
src/xepoll/: CMakeLists.txt
src/xepoll/src/: main.cpp
src/xhttp/: CMakeLists.txt
src/xhttp/src/: main.cpp
src/xsocket/: CMakeLists.txt
src/xsocket/include/: XHTTPClient.h  XHTTPResponse.h  XHTTPServer.h  XSocket_Global.h  XTCP.h  XUDP.h
src/xsocket/src/: XHTTPServer.cpp  XTCP.cpp  XUDP.cpp  main.cpp
src/xsyslog/: CMakeLists.txt
src/xsyslog/src/: main.cpp
src/xtcp/: CMakeLists.txt
src/xtcp/include/: XHTTPClient.h  XHTTPServer.h  XTCP.h  XTCP_Global.h
src/xtcp/src/: XHTTPClient.cpp  XHTTPResponse.cpp  XTCP.cpp  main.cpp
src/xudp/: CMakeLists.txt
src/xudp/src/: main.cpp
testsocket/: CMakeLists.txt
testsocket/include/: XTCP.h
testsocket/src/: XTCP.cpp  main.cpp
testsocket/xsocket/src/: main.cpp
testsocket/xtcp/: CMakeLists.txt
testsocket/xtcp/include/: XTCP.h
testsocket/xtcp/src/: XTCP.cpp
